force-app/main/default/objects/Case/fields/Warranty_Summary__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Summary__c</fullName>
    <label>Warranty Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>