force-app/main/default/objects/Case/listViews/Case_Q_Northwest_Case.listView-meta.xml
<ListView>
    <fullName>Case_Q_Northwest_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Q Earth</label>
    <queue>Case_Q_Earth</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>