force-app/main/default/objects/Case/listViews/Case_Q_Reach_Case.listView-meta.xml
<ListView>
    <fullName>Case_Q_Reach_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Q Reach</label>
    <queue>Case_Q_Reach</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>