force-app/main/default/objects/Case/listViews/Case_Q_Southeast_Case.listView-meta.xml
<ListView>
    <fullName>Case_Q_Southeast_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Q Kashyyyk</label>
    <queue>Case_Q_Kashyyyk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>