force-app/main/default/objects/Case/listViews/Case_Q_Southwest_Case.listView-meta.xml
<ListView>
    <fullName>Case_Q_Southwest_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Q Jupiter</label>
    <queue>Case_Q_Jupiter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>