force-app/main/default/objects/Case/listViews/Cases_Q_Northeast_Case.listView-meta.xml
<ListView>
    <fullName>Cases_Q_Northeast_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cases Q Corillia</label>
    <queue>Cases_Q_Corillia</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>